syntax = "proto3";

package proto;

option go_package = "github.com/michael-diggin/yass/proto;proto";

service WatchTower {
    rpc RegisterNode(RegisterNodeRequest) returns(RegisterNodeResponse){}
}

message RegisterNodeRequest {
    string address = 1;
}

message RegisterNodeResponse {
    repeated string existing_nodes = 1;
}